# yarp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake.in  Doxyfile  README.md  Yarp.sln  autogen.sh  configure.ac  index.html  params.json  yarp.kdev4
Yarp/: CMakeLists.txt  Doxyfile  Doxyfile.cmake  INSTALL  Makefile.am  README  TODO  Yarp.kdev4  Yarp.sln  Yarp.spec  Yarp.vcxproj  Yarp.vcxproj.filters  autogen.sh  chance  character  client  combat  common  configure.ac  engine  graphics  item  magic  map  modules  net  sound  test_u  tools  version.h  yarp.kdevelop  yarp.kdevses
chance/: CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  Makefile.in  chance.kdevelop  chance.kdevelop.pcs  chance.kdevses  chance.vcxproj  chance.vcxproj.filters  configure.ac  rpg_chance_common_tools.cpp  rpg_chance_common_tools.h  rpg_chance_defines.h  rpg_chance_exports.h  stdafx.h
character/: CMakeLists.txt  Doxyfile  Makefile.am  character.kdevelop  character.kdevelop.pcs  character.kdevses  character.vcxproj  character.vcxproj.filters  character_parser.cpp  combat_simulator.cpp  configure.ac  main.cpp  rpg_XMLSchema_XML_types.h  rpg_character.map  rpg_character.xml  rpg_character.xsd  rpg_character_XML_parser.cpp  rpg_character_XML_parser.h  rpg_character_XML_parser_base.cpp  rpg_character_XML_parser_base.h  rpg_character_XML_tools.cpp  rpg_character_XML_tools.h  rpg_character_XML_tree.cpp  rpg_character_XML_tree.h  rpg_character_XML_types.cpp  rpg_character_XML_types.h  rpg_character_abilities.h  rpg_character_ability.h  rpg_character_alignment.h  rpg_character_alignmentcivic.h  rpg_character_alignmentethic.h  rpg_character_attackform.h  rpg_character_attribute.h  rpg_character_attributes.h  rpg_character_base.cpp  rpg_character_base.h  rpg_character_basexml.h  rpg_character_check.h  rpg_character_checktypeunion.h  rpg_character_class.h  (+83 more)
client/: AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  client.kdevelop  client.kdevses  client.vcxproj  client.vcxproj.filters  configure.ac  rpg_client.glade  rpg_client.gtk2  rpg_client.ini  rpg_client.xsd  rpg_client_GTK_manager.cpp  rpg_client_GTK_manager.h  rpg_client_XML_tree.cpp  rpg_client_XML_tree.h  rpg_client_callbacks.cpp  rpg_client_callbacks.h  rpg_client_common.h  rpg_client_common_tools.cpp  rpg_client_common_tools.h  rpg_client_defines.h  rpg_client_engine.cpp  rpg_client_engine.h  rpg_client_entity_manager.cpp  rpg_client_entity_manager.h  rpg_client_exports.h  rpg_client_graphicsmode.h  rpg_client_iGTK_ui.h  rpg_client_iinitGTKUI.h  rpg_client_incl.h  rpg_client_iwidget_ui.h  rpg_client_iwindow.h  rpg_client_iwindow_level.h  rpg_client_logger.cpp  rpg_client_logger.h  rpg_client_network_manager.cpp  rpg_client_network_manager.h  rpg_client_runtimestate.h  (+15 more)
combat/: CMakeLists.txt  Doxyfile  Makefile.am  combat.kdev4  combat.kdevelop  combat.kdevelop.pcs  combat.kdevses  combat.vcxproj  combat.vcxproj.filters  combat_simulator.cpp  configure.ac  rpg_XMLSchema_XML_types.h  rpg_character.xsd  rpg_combat.map  rpg_combat.xsd  rpg_combat_XML_parser.cpp  rpg_combat_XML_parser.h  rpg_combat_XML_parser_base.cpp  rpg_combat_XML_parser_base.h  rpg_combat_XML_tree.cpp  rpg_combat_XML_tree.h  rpg_combat_XML_types.cpp  rpg_combat_XML_types.h  rpg_combat_actiontype.h  rpg_combat_areaofeffect.h  rpg_combat_attackform.h  rpg_combat_attacksavingthrow.h  rpg_combat_attacksituation.h  rpg_combat_check.h  rpg_combat_checktypeunion.h  rpg_combat_common.h  rpg_combat_common_tools.cpp  rpg_combat_common_tools.h  rpg_combat_damage.h  rpg_combat_damagebonus.h  rpg_combat_damagebonustype.h  rpg_combat_damagecountermeasure.h  rpg_combat_damagecountermeasurecheck.h  rpg_combat_damagecountermeasurecheckunion.h  rpg_combat_damagecountermeasuretype.h  (+22 more)
common/: CMakeLists.txt  Doxyfile  Makefile.am  common.kdev4  common.kdevelop  common.kdevelop.pcs  common.kdevses  common.vcxproj  common.vcxproj.filters  configure.ac  rpg_XMLSchema_XML_tree.h  rpg_XMLSchema_XML_types.h  rpg_common.h  rpg_common.map  rpg_common.xsd  rpg_common_XML_parser.cpp  rpg_common_XML_parser.h  rpg_common_XML_parser_base.cpp  rpg_common_XML_parser_base.h  rpg_common_XML_tools.cpp  rpg_common_XML_tools.h  rpg_common_XML_tree.cpp  rpg_common_XML_tree.h  rpg_common_XML_types.cpp  rpg_common_XML_types.h  rpg_common_actiontype.h  rpg_common_ambientlighting.h  rpg_common_amount.h  rpg_common_areaofeffect.h  rpg_common_attribute.h  rpg_common_basechecktypeunion.h  rpg_common_camp.h  rpg_common_checktype.h  rpg_common_climate.h  rpg_common_condition.h  rpg_common_countermeasure.h  rpg_common_creaturemetatype.h  rpg_common_creaturesubtype.h  rpg_common_creaturetype.h  rpg_common_defines.h  (+60 more)
engine/: CMakeLists.txt  Doxyfile  Makefile.am  configure.ac  engine.kdev4  engine.kdevelop  engine.kdevelop.pcs  engine.kdevses  engine.vcxproj  engine.vcxproj.filters  rpg_combat.xsd  rpg_common.xsd  rpg_common_environment.xsd  rpg_dice.xsd  rpg_engine.cpp  rpg_engine.h  rpg_engine.xsd  rpg_engine_XML_tree.cpp  rpg_engine_XML_tree.h  rpg_engine_command.h  rpg_engine_common.h  rpg_engine_common_tools.cpp  rpg_engine_common_tools.h  rpg_engine_defines.h  rpg_engine_entitymode.h  rpg_engine_event_common.h  rpg_engine_event_manager.cpp  rpg_engine_event_manager.h  rpg_engine_exports.h  rpg_engine_iclient.h  rpg_engine_incl.h  rpg_engine_iwindow.h  rpg_engine_level.cpp  rpg_engine_level.h  rpg_engine_messagequeue.cpp  rpg_engine_messagequeue.h  rpg_engine_playermode.h  rpg_graphics.xsd  rpg_item.xsd  rpg_magic.xsd  (+5 more)
graphics/: AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  configure.ac  graphics.kdev4  graphics.kdevelop  graphics.kdevelop.pcs  graphics.kdevses  graphics.vcxproj  graphics.vcxproj.filters  rpg_XMLSchema_XML_types.h  rpg_graphics.map  rpg_graphics.xml  rpg_graphics.xsd  rpg_graphics_SDL_tools.cpp  rpg_graphics_SDL_tools.h  rpg_graphics_SDL_window_base.cpp  rpg_graphics_SDL_window_base.h  rpg_graphics_SDL_window_interface.cpp  rpg_graphics_SDL_window_interface.h  rpg_graphics_SDL_window_sub.cpp  rpg_graphics_SDL_window_sub.h  rpg_graphics_SDLwindow.cpp  (+61 more)
gui/: Doxyfile  (+16 more)
(+1531 files in other folders)
