METASOURCES = AUTO

#ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
  ../tools \
  ../chance \
  ../common \
  ../magic \
  ../item \
  ../character \
  ../combat \
  ../map \
  ../graphics \
  ../sound \
  ../engine \
  ../net \
  ../client \
  ../test_u \
  ../scripts

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = Yarp-${YARP_API_VERSION}.pc

